# ChronicleWeaver

./: .dockerignore  .gitignore  README.md  REPORT.md  pyproject.toml  pyrightconfig.json
docker/: aggregator.Dockerfile  docker-compose.yml  publisher.Dockerfile
src/aggregator/app/: main.py
src/aggregator/app/models/: event_response.py  events.py  publish_request.py  stats_response.py
src/aggregator/app/services/: consumer.py  deduplication_store.py  event_queue.py
src/publisher/app/: main.py
tests/: test_01_deduplication.py  test_02_deduplication_persistance.py  test_03_event_schema_validation.py  test_04_data_consistency.py  test_05_batch_stress.py
utils/: benchmark.py  testing.py
