[project]
name = "ChronicleWeaver"
version = "0.1.0"
description = "Publish-Subscribe Log Aggregator"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi[standard]>=0.120.0",
  "loguru>=0.7.3",
  "orjson>=3.11.4",
  "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
  "basedpyright>=1.32.1",
  "pytest>=8.4.2",
  "ruff>=0.14.2",
]
